packages/domain/tests/fixtures/negative/provider-network-side-effect.fixture.ts
import "@langchain/langgraph-sdk";
import "axios";
